--- a/client/src/components/SingleProductReviews/SingleProductReviews.scss
+++ b/client/src/components/SingleProductReviews/SingleProductReviews.scss
@@ -137,7 +137,10 @@
 
 		.comment {
 			width: 100%;
-			textarea {
+			textarea,
+			input {
+				display: flex;
+				flex-wrap: wrap;
 				width: 100%;
 				height: 100px;
 				resize: vertical;
