--- a/client/src/css/MainPage/MainPage.css
+++ b/client/src/css/MainPage/MainPage.css
@@ -96,88 +96,6 @@
   color: var(--main-text-color);
   font-size: 17px;
 }
-.main-page .top-rating .swiper .slide .product-item,
-.main-page .discount-products .swiper .slide .product-item {
-  background-color: var(--boxes-bg);
-  box-shadow: 0px 1px 3px rgba(3, 0, 71, 0.09);
-  overflow: hidden;
-  border-radius: 10px;
-  text-align: center;
-  transition: 0.3s;
-  border: var(--boxes-border);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  position: relative;
-}
-.main-page .top-rating .swiper .slide .product-item:hover,
-.main-page .discount-products .swiper .slide .product-item:hover {
-  box-shadow: 0px 1px 15px rgba(3, 0, 71, 0.15);
-}
-.main-page .top-rating .swiper .slide .product-item .product-discount,
-.main-page .discount-products .swiper .slide .product-item .product-discount {
-  background-color: var(--second-color);
-  color: var(--main-text-color);
-  transform: rotate(-45deg);
-  position: absolute;
-  padding: 2px;
-  top: 15px;
-  left: -25px;
-  font-size: 12px;
-  width: 100px;
-}
-.main-page .top-rating .swiper .slide .product-item img,
-.main-page .discount-products .swiper .slide .product-item img {
-  width: 200px;
-  height: 200px;
-  object-fit: contain;
-  max-width: 100%;
-  margin: auto;
-  cursor: pointer;
-  padding: var(--main-padding);
-}
-.main-page .top-rating .swiper .slide .product-item .product-desc .title,
-.main-page .discount-products .swiper .slide .product-item .product-desc .title {
-  color: var(--second-text-color);
-  text-transform: capitalize;
-  padding: var(--main-padding);
-  text-align: left;
-}
-.main-page .top-rating .swiper .slide .product-item .product-desc .rating,
-.main-page .discount-products .swiper .slide .product-item .product-desc .rating {
-  padding: var(--main-padding);
-  display: flex;
-  gap: 5px;
-  align-items: center;
-}
-.main-page .top-rating .swiper .slide .product-item .product-desc .price-add,
-.main-page .discount-products .swiper .slide .product-item .product-desc .price-add {
-  padding: var(--main-padding);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: var(--second-color);
-}
-.main-page .top-rating .swiper .slide .product-item .product-desc .price-add .add,
-.main-page .discount-products .swiper .slide .product-item .product-desc .price-add .add {
-  border-radius: 5px;
-  border: 1px solid var(--second-color);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  padding: 5px;
-  transition: all 0.3s;
-}
-.main-page .top-rating .swiper .slide .product-item .product-desc .price-add .add:active,
-.main-page .discount-products .swiper .slide .product-item .product-desc .price-add .add:active {
-  transform: scale(0.93);
-}
-.main-page .top-rating .swiper .slide .product-item .product-desc .price-add .add.add:hover,
-.main-page .discount-products .swiper .slide .product-item .product-desc .price-add .add.add:hover {
-  background-color: var(--second-color);
-  color: var(--main-text-color);
-}
 .main-page .categories {
   width: 95%;
   margin: auto;
@@ -187,6 +105,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
   gap: 20px;
 }
 .main-page .categories .view-categories .category {
