--- a/client/src/css/UpdateProduct/UpdateProduct.css
+++ b/client/src/css/UpdateProduct/UpdateProduct.css
@@ -5,7 +5,7 @@
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 10px;
 }
-.update-product .container .products .product-item {
+.update-product .container .products .product-items {
   background-color: var(--boxes-bg);
   border-radius: 10px;
   box-shadow: var(--boxShadow);
@@ -14,7 +14,7 @@
   align-items: center;
   overflow: hidden;
 }
-.update-product .container .products .product-item .item {
+.update-product .container .products .product-items .item {
   position: relative;
   width: 100%;
   flex: 1;
@@ -31,7 +31,7 @@
   position: relative;
   overflow: hidden;
 }
-.update-product .container .products .product-item .item .product-discount {
+.update-product .container .products .product-items .item .product-discount {
   background-color: var(--second-color);
   color: var(--main-text-color);
   width: 150px;
@@ -44,7 +44,7 @@
   transform: rotate(-45deg);
   text-align: center;
 }
-.update-product .container .products .product-item .item img {
+.update-product .container .products .product-items .item img {
   width: 70px;
   height: 70px;
   object-fit: cover;
@@ -52,18 +52,18 @@
   box-shadow: var(--boxShadow);
   cursor: pointer;
 }
-.update-product .container .products .product-item .item .title {
+.update-product .container .products .product-items .item .title {
   font-weight: bold;
   font-size: 17px;
 }
-.update-product .container .products .product-item .buttons {
+.update-product .container .products .product-items .buttons {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 1px;
 }
-.update-product .container .products .product-item .buttons button {
+.update-product .container .products .product-items .buttons button {
   width: 50%;
   border: none;
   background-color: var(--second-color);
@@ -73,9 +73,9 @@
   font-size: 20px;
   background-color: var(--main-light-bg);
 }
-.update-product .container .products .product-item .buttons .update svg {
+.update-product .container .products .product-items .buttons .update svg {
   color: green;
 }
-.update-product .container .products .product-item .buttons .remove svg {
+.update-product .container .products .product-items .buttons .remove svg {
   color: var(--second-color);
 }
