--- a/client/src/pages/UpdateProduct/UpdateProduct.scss
+++ b/client/src/pages/UpdateProduct/UpdateProduct.scss
@@ -7,7 +7,7 @@
 			grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 			gap: 10px;
 
-			.product-item {
+			.product-items {
 				background-color: var(--boxes-bg);
 				border-radius: 10px;
 				box-shadow: var(--boxShadow);
