--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -32,7 +32,7 @@ footer.footer-layout {
 				.contact {
 					align-items: center;
 					&.about {
-						width: 350px;
+						width: 100%;
 					}
 				}
 			}
