--- a/client/src/components/Filter/Filter.scss
+++ b/client/src/components/Filter/Filter.scss
@@ -1,9 +1,9 @@
 .filter-wrapper {
-	width: 270px;
+	width: 300px;
 	background-color: var(--body-color);
 	transition: transform 0.5s, top 0.5s, left 0.5s, right 0.5s;
 	position: fixed;
-	left: -270px;
+	left: -300px;
 	top: 55px;
 	z-index: 111;
 	box-shadow: var(--boxShadowStrong);
@@ -11,12 +11,10 @@
 	&.move {
 		left: 0;
 		top: 50px;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-		align-items: center;
 		min-height: calc(100vh - 50px);
 		max-height: calc(100vh - 50px);
+		overflow-y: auto;
+		overflow-x: hidden;
 
 		.filter-title {
 			display: flex;
@@ -49,12 +47,11 @@
 	}
 
 	.filter-content {
-		overflow-y: auto;
-
-		> div:not(.title):not(.arrow-to-left):not(:last-child) {
+		> div:not(.title):not(:last-child) {
 			border-bottom: 1px solid #eee;
 			padding-bottom: 20px;
 		}
+
 		.title {
 			color: var(--second-text-color);
 			font-weight: bold;
@@ -82,16 +79,18 @@
 				color: var(--main-text-color);
 			}
 		}
+
 		.filter-by-category,
 		.filter-by-order {
+			margin-right: 10px;
 			display: grid;
 			grid-template-columns: repeat(2, 1fr);
 			gap: 5px;
-			padding: 10px;
+			padding: 10px 20px 10px 10px;
 		}
 		.filter-by-color,
 		.filter-by-size {
-			padding: 10px;
+			padding: 10px 20px 10px 10px;
 			display: grid;
 			grid-template-columns: repeat(4, 1fr);
 			gap: 10px;
