--- a/client/src/css/Filter/Filter.css
+++ b/client/src/css/Filter/Filter.css
@@ -1,9 +1,9 @@
 .filter-wrapper {
-  width: 270px;
+  width: 300px;
   background-color: var(--body-color);
   transition: transform 0.5s, top 0.5s, left 0.5s, right 0.5s;
   position: fixed;
-  left: -270px;
+  left: -300px;
   top: 55px;
   z-index: 111;
   box-shadow: var(--boxShadowStrong);
@@ -11,12 +11,10 @@
 .filter-wrapper.move {
   left: 0;
   top: 50px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
   min-height: calc(100vh - 50px);
   max-height: calc(100vh - 50px);
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 .filter-wrapper.move .filter-title {
   display: flex;
@@ -45,10 +43,7 @@
   transition: all 0.3s;
   color: var(--second-color);
 }
-.filter-wrapper .filter-content {
-  overflow-y: auto;
-}
-.filter-wrapper .filter-content > div:not(.title):not(.arrow-to-left):not(:last-child) {
+.filter-wrapper .filter-content > div:not(.title):not(:last-child) {
   border-bottom: 1px solid #eee;
   padding-bottom: 20px;
 }
@@ -78,14 +73,15 @@
 }
 .filter-wrapper .filter-content .filter-by-category,
 .filter-wrapper .filter-content .filter-by-order {
+  margin-right: 10px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 5px;
-  padding: 10px;
+  padding: 10px 20px 10px 10px;
 }
 .filter-wrapper .filter-content .filter-by-color,
 .filter-wrapper .filter-content .filter-by-size {
-  padding: 10px;
+  padding: 10px 20px 10px 10px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 10px;
