--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,11 @@
-@import url("https://db.onlinewebfonts.com/c/a575313c6dc4fd00c1a9506e1c3ea4fc?family=Euclid+Circular+A");
+/* @import url("https://db.onlinewebfonts.com/c/a575313c6dc4fd00c1a9506e1c3ea4fc?family=Euclid+Circular+A");
 
 
 @font-face {
     font-family: "Euclid Circular A";
     src: url("https://db.onlinewebfonts.com/t/a575313c6dc4fd00c1a9506e1c3ea4fc.eot");
     src: url("https://db.onlinewebfonts.com/t/a575313c6dc4fd00c1a9506e1c3ea4fc.eot?#iefix") format("embedded-opentype"), url("https://db.onlinewebfonts.com/t/a575313c6dc4fd00c1a9506e1c3ea4fc.woff2") format("woff2"), url("https://db.onlinewebfonts.com/t/a575313c6dc4fd00c1a9506e1c3ea4fc.woff") format("woff"), url("https://db.onlinewebfonts.com/t/a575313c6dc4fd00c1a9506e1c3ea4fc.ttf") format("truetype"), url("https://db.onlinewebfonts.com/t/a575313c6dc4fd00c1a9506e1c3ea4fc.svg#Euclid Circular A") format("svg");
-}
+} */
 
 :root {
     --main-layout-height: calc(100vh - 95px);
@@ -22,7 +22,8 @@ body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Euclid Circular A';
+    /* font-family: 'Euclid Circular A'; */
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 
